# fv1-cpp

./: .gitignore  CMakeLists.txt  MAIN.cpp  README.md  exercise02.cu  mars.txt  test.py  test.txt
FV1_cpp/: FV1_cpp.sln
FV1_cpp/FV1_cpp/: FV1_cpp.vcxproj  FV1_cpp.vcxproj.filters  MAIN.cpp  NodalValues.h  SolverParameters.h  StarValues.h  add_ghost_cells.h  baselineMesh.cpp  baselineMesh.h  fluxHLL.cpp  fluxHLL.h  fluxHLLNew.cpp  fluxHLLNew.h  free_assembled_solution.cpp  frictionImplicit.cpp  fv1_operator.h  get_bar_values.h  get_dt_CFL.h  get_nodal_values.cpp  get_nodal_values.h  hInitialConservative.h  mainProgram.cpp  malloc_assembled_solution.cpp  malloc_assembled_solution.h  malloc_bar_values.cpp  malloc_bar_values.h  malloc_face_values.cpp  malloc_face_values.h  malloc_fluxes.cpp  malloc_fluxes.h  malloc_nodal_values.cpp  malloc_nodal_values.h  malloc_star_values.cpp  malloc_star_values.h  real.h  set_boundary_conditions.cpp  set_simulation_parameters_for_test_case.cpp  set_solver_parameters.h  set_solver_parameters_for_test_case.cpp  set_solver_parameters_for_test_case.h  (+2 more)
FV1_cpp/FV1_cpp/classes/: AssembledSolution.h  SolverParameters.h  StarValues.h  simulationParameters.h
FV1_cpp/FV1_cpp/input/: set_solver_parameters.cpp
FV1_cpp/FV1_cpp/operator/: add_ghost_cells.cpp  baselineMesh.cpp  baselineMesh.h  bed_data_c_property.h  friction_update.h  fv1_operator.cpp  get_dt_CFL.h  get_face_values.cpp  get_face_values.h  get_nodal_values.cpp  get_positivity_preserving_nodes.h  get_wet_dry_cells.cpp  get_wet_dry_cells.h
FV1_cpp/FV1_cpp/output/: write_solution_to_file.h
classes/: AssembledSolution.h  FaceValues.h  NodalValues.h  simulationParameters.h
input/: set_boundary_conditions.cpp  set_simulation_parameters.cpp  set_solver_parameters.h
operator/: add_ghost_cells.h  fluxHLL.cpp  fluxHLL.h  friction_update.cpp  friction_update.h  fv1_operator.cpp  fv1_operator.h  get_bar_values.cpp  get_bar_values.h  get_dt_CFL.cpp  get_dt_CFL.h  get_face_values.h  get_nodal_values.h  get_positivity_preserving_nodes.cpp  get_positivity_preserving_nodes.h  get_wet_dry_cells.cpp  get_wet_dry_cells.h  h_init_c_property.h
output/: write_solution_to_file.cpp  write_solution_to_file.h
